# Optima

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: claude.yml
data/: README.md
demo_data/: README.md  experiments.json  papers_cache.json  sample_experiments.csv
demo_data/docs/: finetuning_compute_budget_memo.md  rag_eval_postmortem.md  refund_incident_report.md
optima/: __init__.py  cli.py  config.py  orchestrator.py  rendering.py  schema.py  ui.py
optima/agents/: context_agent.py  evidence.py  research_agent.py  runner.py  synthesis_agent.py
optima/ingest/: csv_loader.py
optima/tools/: internal_store.py  papers.py  registry.py  scoring.py
prompts/: context.md  intent.md  research.md  synthesis.md
tests/: _fakes.py  test_commands.py  test_ingest.py  test_init.py  test_internal_store.py  test_orchestrator.py  test_papers.py  test_rendering.py  test_schema.py  test_synthesis_links.py  test_ui.py
