[project]
name = "optima"
version = "0.1.0"
description = "An experiment intelligence layer for AI research teams."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Evan McCall" }]
keywords = ["llm", "claude", "agents", "research", "experiment-tracking", "rag"]
dependencies = [
    "anthropic>=0.49",
    "pydantic>=2.7",
    "rich>=13.7",
    "typer>=0.12",
    "httpx>=0.27",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
optima = "optima.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["optima"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
